Get store working, fix tests and retrieve categories for nominations form

--- a/src/main/frontend/awards-frontend/src/app/container/app.component.html
+++ b/src/main/frontend/awards-frontend/src/app/container/app.component.html
@@ -1,2 +1,2 @@
 <app-navigation-bar-component></app-navigation-bar-component>
-<h1>Container works</h1>
+<app-nominations-form-container-component></app-nominations-form-container-component>
