--- a/src/main/frontend/awards-frontend/src/app/components/nominations-form-container/nominations-form-container.component.html
+++ b/src/main/frontend/awards-frontend/src/app/components/nominations-form-container/nominations-form-container.component.html
@@ -1,5 +1,5 @@
-<p>
-  nominations-form-container-component works!
-</p>
-
-{{categories | async | json}}
+<app-nominations-form
+  [categories]="categories$ | async"
+  [submitState]="submitState$ | async"
+  (submitButtonClick)="submit($event)"
+></app-nominations-form>
