awards-frontend: add basic view results component and implement nav bar

--- a/awards-frontend/src/app/components/navigation-bar/navigation-bar.component.html
+++ b/awards-frontend/src/app/components/navigation-bar/navigation-bar.component.html
@@ -1,9 +1,9 @@
 <mat-toolbar>
   <span>Awards Service</span>
   <span>
-    <button mat-button>Submit Nominations</button>
+    <button mat-button (click)="redirect('nominate')">Submit Nominations</button>
   </span>
   <span>
-    <button mat-button>View Results</button>
+    <button mat-button (click)="redirect('results')">View Results</button>
   </span>
 </mat-toolbar>
