--- a/awards-frontend/src/app/container/app.component.html
+++ b/awards-frontend/src/app/container/app.component.html
@@ -1,2 +1,2 @@
 <app-navigation-bar-component></app-navigation-bar-component>
-<app-nominations-form-container-component></app-nominations-form-container-component>
+<router-outlet></router-outlet>
