awards-frontend: implement view-results templates

--- a/awards-frontend/src/app/components/view-results-container/view-results-container.component.html
+++ b/awards-frontend/src/app/components/view-results-container/view-results-container.component.html
@@ -1,2 +1,4 @@
-<app-view-results></app-view-results>
-<p>view-results-container works!</p>
+<app-view-results
+  [resultsStatus]="resultsStatus$ | async"
+  [results]="results$ | async"
+></app-view-results>
