--- a/awards-frontend/src/app/components/view-results/view-results.component.html
+++ b/awards-frontend/src/app/components/view-results/view-results.component.html
@@ -1,1 +1,34 @@
-<p>view-results works!</p>
+<ng-container *ngIf="isStatusSuccess()">
+  <h1>Results:</h1>
+  <div *ngFor="let category of results.awards">
+    <mat-card>
+      <mat-card-title>{{category.categoryName}}</mat-card-title>
+      <mat-card-content>
+        <mat-card-subtitle>Winner:</mat-card-subtitle>
+        <div>
+          {{category.winnerName}}
+        </div>
+        <br>
+        <mat-card-subtitle>Nominations:</mat-card-subtitle>
+        <div *ngFor="let nomination of category.nominations">
+          {{nomination}}
+        </div>
+      </mat-card-content>
+    </mat-card>
+    <br>
+  </div>
+</ng-container>
+
+<ng-container *ngIf="isStatusFetching()">
+  <mat-progress-spinner mode="indeterminate"></mat-progress-spinner>
+</ng-container>
+
+<ng-container *ngIf="isStatusError()">
+  <mat-card>
+    <mat-card-title>An Error occurred</mat-card-title>
+    <mat-card-content>
+      Unable to retrieve results. Have any nominations been submitted?
+    </mat-card-content>
+  </mat-card>
+</ng-container>
+
