--- a/awards-frontend/src/app/components/nominations-form-container/nominations-form-container.component.html
+++ b/awards-frontend/src/app/components/nominations-form-container/nominations-form-container.component.html
@@ -1,5 +1,6 @@
 <app-nominations-form
   [categories]="categories$ | async"
   [submitState]="submitState$ | async"
+  [categoriesStatus]="categoriesStatus$ | async"
   (submitButtonClick)="submit($event)"
 ></app-nominations-form>
