--- a/awards-frontend/src/app/components/nominations-form/nominations-form.component.scss
+++ b/awards-frontend/src/app/components/nominations-form/nominations-form.component.scss
@@ -1,3 +1,11 @@
 #progress-bar-container {
   max-width: 80px
 }
+
+.central-spinner {
+  display: flex;
+  width: 100%;
+  height: 100%;
+  justify-content: center;
+  align-content: center;
+}
