awards-frontend: handle errors on submitting nominations

--- a/awards-frontend/src/app/components/nominations-form-container/nominations-form-container.component.html
+++ b/awards-frontend/src/app/components/nominations-form-container/nominations-form-container.component.html
@@ -3,4 +3,6 @@
   [submitState]="submitState$ | async"
   [categoriesStatus]="categoriesStatus$ | async"
   (submitButtonClick)="submit($event)"
+  (submitNominationsFailed)="submitFailed()"
+  (submitNominationsSuccess)="submitSuccess()"
 ></app-nominations-form>
